# Real-Time-Multi-Target-Detection-and-Tracking-Pipeline

./: CMakeLists.txt  README.md
benchmarks/: benchmark_pipeline.cpp
include/: background_model.hpp  detection_extractor.hpp  image_io.hpp  morphology.hpp  pipeline.hpp  tracker.hpp  types.hpp
python_prototype/: detector.py
scripts/: build_and_test.sh
src/: background_model.cpp  detection_extractor.cpp  image_io.cpp  main.cpp  morphology.cpp  pipeline.cpp  tracker.cpp
tests/: test_pipeline.cpp
